[package]
name = "below-tc"
version = "0.0.1"
edition = "2021"

[dependencies]
netlink-packet-core = "0.7.0"
netlink-packet-route = {path = "../../../rust-netlink/netlink-packet-route", version = "0.18.1"}
netlink-packet-utils = "0.5.2"
netlink-sys = "0.8.5"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
